<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_settings_password"
            app:key="password"
            app:title="@string/password" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_settings">
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="sni"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="allowInsecure"
            app:title="@string/allow_insecure" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="alpn"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="certificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/utls_fingerprint_entry"
            app:entryValues="@array/utls_fingerprint_entry"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="utlsFingerprint"
            app:title="@string/utls_fingerprint"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="ECH">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="enableECH"
            app:title="@string/enable" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_nfc_24"
            app:key="echConfig"
            app:title="@string/ech_config"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="echQueryServerName"
            app:summary="FQDN used to fetch ECH config via HTTPS RR (decouples from inner SNI)"
            app:title="ECH Query Server Name" />
    </PreferenceCategory>

</PreferenceScreen>